refactor: use interoperability microservice for external skills